tests/outref/TERR031.ref

-- TERR031 : OCTO502 : Error scenarios in AS column name alias list

-- Test of ERR_AS_MORE_COLUMNS
SELECT * FROM names AS abcd(a,b,c,d);
SELECT a,b,c FROM (SELECT firstname,lastname FROM names) AS abcd(a,b,c,d);
SELECT col1 FROM (SELECT 1 AS col1) AS tbl(a,b);

-- Test of ERR_UNKNOWN_COLUMN_NAME
SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
SELECT a,lastname,c FROM (SELECT * FROM names) AS abcd(a,b,c);

-- Test of ERR_MISSING_FROM_ENTRY
SELECT names.id,b,c FROM names AS abcd(a,b,c);

-- Test of ERR_AS_MORE_COLUMNS with VALUES clause
SELECT * FROM (VALUES (1), (3), (5), (7), (9) ) AS MyTable(a,b);

-- Test of ERR_UNKNOWN_COLUMN_NAME with VALUES clause
SELECT * FROM names WHERE (id = (SELECT x FROM (VALUES(y)) AS tbl(x)));

[ERROR] PATH:LINENUM DATE TIME : ERR_AS_MORE_COLUMNS : Table name 'ABCD' has 3 columns available but 4 columns specified
Error with syntax near (line 1, column 24):

SELECT * FROM names AS abcd(a,b,c,d);
                       ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT * FROM names AS abcd(a,b,c,d);
[ERROR] PATH:LINENUM DATE TIME : ERR_AS_MORE_COLUMNS : Table name 'ABCD' has 2 columns available but 4 columns specified
Error with syntax near (line 1, column 61):

SELECT a,b,c FROM (SELECT firstname,lastname FROM names) AS abcd(a,b,c,d);
                                                            ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT a,b,c FROM (SELECT firstname,lastname FROM names) AS abcd(a,b,c,d);
[ERROR] PATH:LINENUM DATE TIME : ERR_AS_MORE_COLUMNS : Table name 'TBL' has 1 columns available but 2 columns specified
Error with syntax near (line 1, column 40):

SELECT col1 FROM (SELECT 1 AS col1) AS tbl(a,b);
                                       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT col1 FROM (SELECT 1 AS col1) AS tbl(a,b);
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: ID
Error with syntax near (line 1, column 8):

SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
       ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: FIRSTNAME
Error with syntax near (line 1, column 11):

SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
          ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: LASTNAME
Error with syntax near (line 1, column 21):

SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
                    ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: LASTNAME
Error with syntax near (line 1, column 10):

SELECT a,lastname,c FROM (SELECT * FROM names) AS abcd(a,b,c);
         ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT a,lastname,c FROM (SELECT * FROM names) AS abcd(a,b,c);
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : NAMES
Error with syntax near (line 1, column 8):

SELECT names.id,b,c FROM names AS abcd(a,b,c);
       ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT names.id,b,c FROM names AS abcd(a,b,c);
[ERROR] PATH:LINENUM DATE TIME : ERR_AS_MORE_COLUMNS : Table name 'MYTABLE' has 1 columns available but 2 columns specified
Error with syntax near (line 1, column 52):

SELECT * FROM (VALUES (1), (3), (5), (7), (9) ) AS MyTable(a,b);
                                                   ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT * FROM (VALUES (1), (3), (5), (7), (9) ) AS MyTable(a,b);
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: Y
Error with syntax near (line 1, column 56):

SELECT * FROM names WHERE (id = (SELECT x FROM (VALUES(y)) AS tbl(x)));
                                                       ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT * FROM names WHERE (id = (SELECT x FROM (VALUES(y)) AS tbl(x)));
